--- a/style.css
+++ b/style.css
@@ -1,20 +1,25 @@
 /* General Styles */
 body {
-   font-family: Arial, sans-serif;
-   line-height: 1.6;
+   font-family: Menlo, sans-serif;
+   line-height: 1.5;
    color: #333;
-   background-color: #f4f4f4;
+   background-color: white;
    margin: 0;
    padding: 20px;
+   font-variant-emoji: text;
 }
 
+a {
+   color: #f2b261;
+   text-decoration: none;
+}
 #resume {
    max-width: 800px;
-   background: white;
-   padding: 20px;
+   background: #f7e8d5;
+   padding: 40px;
    margin: auto;
-   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-   border-radius: 10px;
+   border-radius: 4px;
+   box-shadow: 0 2px 15px rgba(0, 0, 0, 0.35);
 }
 
 /* Header */
@@ -36,7 +41,7 @@ header p {
 }
 
 header a {
-   color: #0077cc;
+   color: #f2b261;
    text-decoration: none;
 }
 
@@ -51,7 +56,7 @@ section {
 
 h2 {
    color: #222;
-   border-bottom: 2px solid #0077cc;
+   border-bottom: 2px solid #f2b261;
    padding-bottom: 5px;
    margin-bottom: 10px;
 }
@@ -72,17 +77,17 @@ li {
 
 /* Footer */
 footer {
+   position: static;
    text-align: center;
-   padding: 10px;
+   padding: 5px;
    font-size: 0.9em;
-   background-color: #222;
+   background-color: #333;
    color: white;
-   margin-top: 20px;
-   border-radius: 10px;
+   border-radius: 0 0 0px 0px;
 }
 
 footer a {
-   color: #00aced;
+   color: #f2b261;
    text-decoration: none;
    margin: 0 5px;
 }
